--- a/instance/wrapper-instance.conf
+++ b/instance/wrapper-instance.conf
@@ -112,5 +112,5 @@ wrapper.ntservice.description=ApacheDS %INSTANCE% server instance
 wrapper.ntservice.starttype=AUTO_START
 
 # Allow the service to interact with the desktop.
-wrapper.ntservice.interactive=false
+wrapper.ntservice.interactive=false;
 
